# CSM-CMD

./: .gitignore  CMakeLists.txt  README.md  rebuild.bat
include/: cmd_parser.hpp  cmd_registration.hpp  cmd_registry.hpp  csm_terminal.hpp  logger.hpp
src/: cmd_parser.cpp  cmd_registration.cpp  cmd_registry.cpp  logger.cpp  main.cpp
src/CmdParser/: command_parser.cpp
src/CmdReg/: command_registry.cpp  command_registry.hpp
src/CsmTerminal/: csm_terminal.cpp  csm_terminal.hpp
src/Tests/: test_completion.cpp  test_logger.cpp  test_parser.cpp  test_registration.cpp  test_registry.cpp  test_timeout.cpp
